--- a/ChapterSix.tex
+++ b/ChapterSix.tex
@@ -1,1 +1,39 @@
-\Chapter{Discussion and Conclusions}\label{CH6}
+\chapter{Discussion and Conclusions}\label{CH6}
+
+\section{Discussion}
+
+The diffraction theory of the Foucault test predicts an intensity pattern that is the Hilbert transform. The resulting signal is related to the gradient of the wavefront phase, but without the scaling by spatial frequency. The PWFS is an extension of the Foucault test, and the diffraction theory of the Foucault accurately predicts the intensity patterns seen by a PWFS. Similar to the Foucault test sensitivity of a PWFS with no modulation is independent of spatial frequency as found in previous work by Guyon\cite{guyon2005} because all spatial frequencies produce an equally strong signal.
+
+ Codona et al.\cite{codona2018comparative} used the AOsim3 wave optics package to compare end to end performance of a 3PWFS to a 4PWFS with no modulation. In this simulation the Raw Intensity  signal handling method was used. In open loop with no noise the study showed that the 4PWFS out performed the 3PWFS by 0.005 Strehl. Our simulation results agree with the findings by Codona et al. We found in our simulations with 0.5 read noise that the performance of the wavefront sensors are within 0.01 Strehl. Our results differ from Codona et al. when including read noise. They found that for a detector with $3e^-$ read noise, that there was a gap performance improvement by 1 guide star magnitude in favor of the 3PWFS. Codona et. al. considered other factors including system latency, and were sensing in the J-band. Our simulations are in r-band and were optimized only for loop gain. Using a detector with $12 e^-$ read noise we found that the performance of the wavefront sensors are once again comparable, and we found only $~0.02$ gain in Strehl from the 3PWFS at 10th magnitude. The scope of our simulations is limited but still agree that the 3PWFS is less sensitive to read noise, however the amount of improvement gained is still under question. Both the 3PWFS and 4PWFS discussed in this paper are refractive, and image all pupils onto the same detector. Moving towards a reflective PWFS that would image each pupil onto its own detector could have a more substantial benefit. Each detector would be smaller, resulting in faster readout speeds with less added read noise. Low read noise detectors are expensive, so using a reflective PWFS would increase system cost and complexity.   
+ 
+ We have found that the 3PWFS is a viable wavefront sensor that is able to fully reconstruct a wavefront and produce a stable closed loop. Our simulations assumed a perfect wavefront sensor with the absence of manufacturing errors. A high quality four sided pyramid optic is difficult and expensive to manufacture. Common errors on four sided pyramid manufacturing include roofing of the pyramid tip, or chipping of the pyramid tip which result in a loss of Strehl.  The 3PWFS is an exciting opportunity for systems that face a trade off between cost and quality. A real 3PWFS could be cheaper and offer better performance than a 4PWFS. As a next step to developing the potential of the 3PWFS the University of Arizona Extreme Wavefront Control Lab (XWCL) in partnership with Hart Scientific has manufactured a three sided pyramid optic with a tip less than $5\mu m$ in size. The optic has been integrated into a 3PWFS that is a visiting instrument on the Comprehensive Adaptive Optics and Coronagraph Test Instrument (CACTI). A future experiment will test the performance of the 3PWFS against the currently integrated 4PWFS under different strengths of turbulence. 
+ 
+
+ 
+
+\section{Conclusion}
+
+
+The PWFS is an extension of the Foucault test knife edge test to two dimensions. By examining the diffraction theory of the Foucault test, which is much simpler than a full pyramid, we gain insight to the physical processes behind the PWFS. In Section~\ref{diffraction} we consolidated the diffraction theory of the knife edge test by Linfoot\cite{linfoot1948theory}, Katzoff\cite{katzoff1971quantitative}, and Wilson\cite{wilson1975wavefront} into a single derivation with uniform notation. Expanding upon their results, we linked phase aberrations in shape of Fourier modes to intensity patterns produced by the knife edge test. The result found for a phase error in the shape of a Fourier mode is an intensity pattern described by the Hilbert transform of the phase function. We considered an example $\cos(nx)$ phase pattern, and mathematically derived that the resulting intensity pattern is proportional to $-\sin(nx)$, which is functionally the derivative of the phase without the dependence on spatial frequency. We confirmed this result by considering the intensity and slope signals from a simulated 3PWFS and 4PWFS. We used this result to motivate the signal processing of the pyramid measurements and introduced a new Slope Map method to handling the 3PWFS signals, which is derived using the centroid of an equilateral triangle. This method provided a stable closed loop correction on the LOOPS testbed.
+
+As a further test of the 3PWFS and slopes maps equations we performed an end to end simulation of an adaptive optics system to compare the performance of the 3PWFS and 4PWFS as well as the Raw Intensity and Slopes Maps signal processing techniques. We found that in the absence of read noise the performance of the wavefront sensors are within 0.01 Strehl. When we included read noise into the simulation, we saw a break in this trend at lower guide star magnitudes, and found a gain of 0.036 Strehl the 3PWFS using Raw Intensity  over the 4PWFS using Slopes Maps at a stellar magnitude of 10. At the same magnitude the 4PWFS using Raw Intensity also out performed the 4PWFS Slopes Maps, but the gain was only 0.0122 Strehl. We conclude that the 3PWFS is a viable wavefront sensor with similar performance in the scope of our study. Our simulations only considered a single modulation radius and $r_0$ of atmospheric turbulence. Further work should explore the respective performances at different turbulence strengths and different modulation radii. 
+
+\section{Discussion}
+
+In the current configuration a 3PWFS and 4PWFS were integrated into CACTI for a performance test. Both PWFS were designed with refractive pyramid optics and had similar sampling across the pyramid pupils. Effort was put into minimizing the differences between each PWFS. Non-common path error was minimized by insuring each pyramid optic had the same PSF on the tip. The performance of each wavefront sensor was found to be and average of 0.02 Strehl at 1.6 $\lambda/D$, 0.02 Strehl at 3.25 $\lambda/D$, and 0.03 Strehl at 5 $\lambda/D$ modulation. The performance of the PWFS are too similar to decouple any differences from systematic errors such as misalignment or imperfect calibrations. Our results agree with Schatz et al, that the performance of the 3PWFS is comparable to the 4PWFS. 
+
+The results of our experiment showed the gain in performance by decreasing the modulation radius. It has been shown that increasing the modulation radius decreases the sensitivity of the PWFS \cite{correia2020performance}. Previous work on the theoretical sensitivity of the PWFS showed that the loss of sensitivity is maximum at the spatial frequencies at and below the spatial frequency of the modulation radius\cite{guyon2005}$^,$\cite{verinaud2004nature}. The result should be that the sensitivity of low order modes should be decreased, and that the sensitivity of high order modes is mostly preserved. Our results are consistent with these findings that the AO system should be run at as small of a modulation radius as possible for better sensitivity. 
+
+
+% The power of low order modes of the turbulence screens used by CACTI are filtered so that the full stroke of the DM is not used. \jrmcom{This isn't quite right.  The power at low spatial frequencies is lower than it would be in unfiltered Kolmogorov turb, but it is still higher than at higher spatial frequencies.  That is, the filter does not set it to 0.} Most of the power in the spatial frequencies of the turbulence screen power spectrum are mid to high spatial frequencies. \jrmcom{So this statement might be too big:}Our results suggest that modulating decreases sensitivity across all spatial frequencies, and that the AO system should be run at as small of a modulation radius as possible. 
+
+
+
+\section{Conclusion}
+
+We have presented the design of the Comprehensive Adaptive Optics and Coronagraph Test Instrument (CACTI), a new ExAO testbed designed with the flexibility to support visiting instruments and to be easily re-configurable to perform multiple experiments. In the current configuration a visiting 3PWFS was integrated into CACTI for a performance test. Non-common path error was minimized by insuring each pyramid optic had the same PSF on the tip. We demonstrated the operation of the 3PWFS by closing the AO loop on simulated turbulence on CACTI. The performance of each wavefront sensor was determined by measuring the relative Strehl ratio of the closed loop PSF with the reference PSF. The Strehl ratio was calculated by a Strehl calculation tool developed for CACTI in Python.  The difference in Strehl for the 3PWFS compared to the 4PWFS varies on average by +0.02 Strehl at 1.6 $\lambda/D$, +0.02 Strehl at +3.25 $\lambda/D$, and +0.03 Strehl at 5 $\lambda/D$ modulation. Our experiment showed the gain in performance by decreasing the modulation radius. Decreasing the modulation radius from 3.25 $\lambda/D$ to  1.6 $\lambda/D$ resulted in a gain in Strehl of 0.34 for the 3PWFS and 0.38 for the 4PWFS. From our results we conclude that the 3PWFS has comparable performance to the 4PWFS, and that an AO system should be run with as small of a modulation radius as possible to optimize performance. 
+
+
+
+
+
