--- a/ChapterTwo.tex
+++ b/ChapterTwo.tex
@@ -1,20 +1,8 @@
-\chapter{The Pyramid Wavefront Sensor}\label{CH2}
+\chapter{Analysis of the PWFS Signals}\label{CH2}
 %Babcock. Summary of some on sky systems. 
 
-Adaptive optics systems correct for the blurring of Earth's atmosphere in real time. A key component of the AO closed loop is the wavefront sensor. Wavefront sensors encode phase errors into intensity patterns that are recorded on a detector. In this chapter we will describe how the process of measuring and applying a correction for a wavefront error starting from an electromagnetic wave with a phase error. We start with and introduction to adaptive optics and the pyramid wavefront sensor. We then derive the expected signal from the pyramid using an example phase error in the shape of a Fourier mode. We present two different methods of processing the wavefront sensor signal to preserve only the intensity patterns caused by a phase error. Lastly we finish by describing how we use the processed signals to calibrate a wavefront sensor and build the reconstructor matrix that allows us measure a wavefront of arbitrary phase error. 
-
-
-
-
-%  The Giant Magellan Telescope, the Thirty Meter Telescope (TMT)\cite{chisholm2020thirty}, and the European Extremely Large Telescope (E-ELT) \cite{ramsay2020eso}, all have ExAO instruments planned that use pyramid wavefront sensors. The Planetary Systems Imager \cite{fitzgerald2019planetary} for the TMT will use a non-modulated pyramid wavefront sensor\cite{guyon2018wavefront} in combination with lower order wavefront control to reach and maintain high contrast. The Multi-AO Imaging Camera for Deep Observations (MICADO)\cite{davies2018micado} for the ELT is a pathfinder instrument for performing high contrast imaging on ELTs. The Giant Magellan Extreme Adaptive Optics System (GMagAO-X)\cite{males2019gmagao} is being developed as a first light ExAO instrument for the GMT and will use a pyramid wavefront sensor. 
-
-
-
-\section{The Pyramid Wavefront Sensor}
-
-The GSMTs all plan to use pyramid wavefront sensors (PWFS) in ExAO instruments. The PWFS acts like a Foucault test in 2 dimensions. Light from the telescope is focused onto a glass pyramid tip where it is split and then the pupil plane is reimaged onto a detector. The result is copies of the telescope pupil that contain intensity fluctuations that are related to the wavefront phase. All current PWFS on telescopes use a four-sided pyramid (4PWFS), resulting in four pupil copies. The Planetary Systems Imager, (\cite{fitzgerald2019planetary}), for the TMT will use a non-modulated PWFS, (\cite{guyon2018wavefront}), in combination with lower order wavefront control to reach and maintain high contrast. The Multi-AO Imaging Camera for Deep Observations (MICADO), (\cite{davies2018micado}), for the E-ELT is a pathfinder instrument for performing high contrast imaging on GSMTs that uses a PWFS. The High Angular Resolution Monolithic Optical and Near-infrared Integral field spectrograph (HARMONI),(\cite{neichel2016adaptive}), also for the E-ELT has a PWFS in the single conjugate adaptive optics (SCAO) mode to deliver diffraction limited performance for the E-ELT's core spectroscopic capability. The Giant Magellan Extreme Adaptive Optics System (GMagAO-X), (\cite{males2019gmagao}) is being developed as a first light ExAO instrument for the GMT and will use a PWFS. 
-
-
+A key component of an ExAO system is the WFS, which measures aberrations from atmospheric turbulence.  A common choice in current and next generation instruments is the pyramid wavefront sensor (PWFS). The PWFS is a highly sensitive wavefront sensor that is able to measure the wavefront at high speed. The sensitivity and linear range of the PWFS can be tuned by dynamic modulation, making the PWFS robust to different seeing conditions. 
+\section{The Pyramid Wavefront Sensor} 
 The optical design of the PWFS consists of four components: a focusing optic, the glass pyramid, and a relay lens to image the pupils on the detector.\cite{ragazzoni2002pyramid} Figure \ref{fig:pyramid} shows a schematic of the operation of a PWFS.  The starlight is first brought to a focus on the tip of a glass pyramid that splits the focal plane into parts. The apex angle of the pyramid imparts a tilt to separate each of the sections. The result is copies of the telescope pupil that are separated spatially on a detector. The number of pixels across each pupil determines the number of modes the instrument is sensitive to. Current on-sky adaptive optics systems that have a PWFS use a four-sided PWFS. The Magellan Adaptive Optics System (MagAO)\cite{close2018status}, the Large Binocular Telescope Interferometer (LBTI)\cite{esposito2011adaptive}, and MagAO-X use an achromatic double four-sided pyramid. The SCExAO instrument uses two crossed roof prisms as its pyramid optic. The PWFS is highly sensitive but suffers from low dynamic range. A modulator is used to increase the linear range of the PWFS. Modulation is achieved by oscillating a piezo-actuator driven mirror to drive the PSF on the pyramid tip into a circular pattern with a radius quoted in units of $\lambda/D$, where $\lambda$ is wavelength, and $D$ is the diameter of the entrance pupil. This increases the effective spot size on the pyramid tip which increases the sensor's linearity at the cost of sensitivity.\cite{guyon2005}  
 
 \begin{figure}
@@ -35,7 +23,7 @@ The intensity measured in the PWFS must be processed to infer the wavefront phas
 
 where $S_x, S_y$ are the local wavefront slopes in the x and y direction, and $I_1...I_4$ are the intensity values of the pixel corresponding to the same location in each pupil. The intensity patterns in the pyramid pupils contain both the X and Y spatial information of wavefront gradient from the diffraction off of the pyramid edges. The Raw Intensity (RI) signal processing method uses the pyramid signal as-is. The benefit of the Raw Intensity method is that it is relatively unaffected by alignment errors. The major challenge in using this technique is obtaining a good flat wavefront reference image. The signals in the pyramid pupils are then extracted into a single column vector of intensity values.
 
-All current PWFSs on telescopes use a 4PWFS. ExAO systems need high sampling of the PWFS pupils to optimize performance, and as a result require larger detectors. Detector size, speed, and noise all impose limits on wavefront sensor designs and limit the performance of an GSMT-ExAO system. We are interested in exploring the 3PWFS as an alternative PWFS for an ELT-ExAO wavefront sensor to overcome these limitations. The 3PWFS only has three copies of the pupil and therefore uses fewer detector pixels than the 4PWFS and should be less sensitive to read noise. In this paper we assess the performance of the 3PWFS compared to the 4PWFS in simulation to determine if the 3PWFS does outperform the 4PWFS when using high read noise detectors.
+All current PWFSs on telescopes use a 4PWFS. ExAO systems need high sampling of the PWFS pupils to optimize performance, and as a result require larger detectors. Detector size, speed, and noise all impose limits on wavefront sensor designs and limit the performance of an GSMT-ExAO system. We are interested in exploring the 3PWFS as an alternative PWFS for an ELT-ExAO wavefront sensor to overcome these limitations. The 3PWFS only has three copies of the pupil and therefore uses fewer detector pixels than the 4PWFS and should be less sensitive to read noise. We assess the performance of the 3PWFS compared to the 4PWFS in simulation to determine if the 3PWFS does outperform the 4PWFS when using high read noise detectors.
 
 To assess the performance of the 3PWFS compared to the 4PWFS, a simulation was developed using the Object Oriented Matlab Adaptive Optics toolkit (OOMAO) \cite{OOMAO}. The OOMAO toolkit is an end-to-end adaptive optics model that can simulate different combinations of guide stars, turbulent atmospheres, wavefront sensors, deformable mirrors, and science cameras. Light is propagated using Fraunhofer diffraction. The PWFS is simulated using a single tip/tilt phase mask that is segmented into N parts. Figure \ref{fig:oomaoFigs}.A and \ref{fig:oomaoFigs}.C show the masks for the 3PWFS and 4PWFS. The masks are scaled and rotated according to a user input for rotation and pyramid apex angle that controls the separation of the pyramid pupils. After scaling, the mask is converted into a phase mask that is applied at the focal plane to simulate a pyramid tip. Figure \ref{fig:oomaoFigs}.C and \ref{fig:oomaoFigs}.D show the resulting pyramid pupils on the simulated wavefront sensor camera, using a flat wavefront and 5 $\lambda/D$ modulation. The master OOMAO toolbox simulates a 4PWFS using Slopes Maps. We extended the PWFS class in OOMAO to include a 3PWFS, taking care that the amplitude of the tip/tilt phase in the 3PWFS phase screen generation matched that of 4PWFS. We included our derivation of the Slopes Maps equation for the 3PWFS (derived in Section~\ref{SlopesDerivation} below), and added the Raw Intensity method for both the 4PWFS and the 3PWFS. For both the Slopes Maps and Raw Intensity method the signal was normalized by the mean value across all valid pixels on the wavefront sensor detector, instead of normalizing pixel by pixel. 
 
