--- a/Introduction.tex
+++ b/Introduction.tex
@@ -62,6 +62,9 @@ High contrast imaging is a special case of direct imaging that is used to image 
 
 Within the next decade, the world will see a new generation of Giant Segmented Mirror Telescopes (GSMTs). The Giant Magellan Telescope (GMT) under construction at Las Campanas Observatory, Chile, will have seven 8.4-meter mirrors, forming a 24.5-meter primary mirror, (\cite{fanson2020overview}.) The Thirty Meter Telescope (TMT), and the European Extremely Large Telescope(E-ELT) at Cerro Paranal, Chile, have highly segmented primary mirrors, (\cite{chisholm2020thirty}). The 39-meter E-ELT primary mirror will be comprised of hundreds of 1.4-meter hexagonal segments,(\cite{ramsay2020eso}). The TMT will have 492, 1.44-meter hexagonal segments to form the 30-meter primary mirror, (\cite{sanders2013thirty}). The GSMTs will have the light-collecting power to detect and characterize potentially habitable terrestrial exoplanets for the first time. This will only be achievable if the performance of GSMT-ExAO systems is optimized. Alternative architectures of wavefront sensors are under consideration for GSMT-ExAO instruments considering the trade-offs between detector size, speed, and noise that determine the performance of GSMT-ExAO wavefront control. 
 
+ The GSMTs all plan to use pyramid wavefront sensors (PWFS) in ExAO instruments. The PWFS acts like a Foucault test in 2 dimensions. Light from the telescope is focused onto a glass pyramid tip where it is split and then the pupil plane is reimaged onto a detector. The result is copies of the telescope pupil that contain intensity fluctuations that are related to the wavefront phase. All current PWFS on telescopes use a four-sided pyramid (4PWFS), resulting in four pupil copies. The Planetary Systems Imager \cite{fitzgerald2019planetary} for the TMT will use a non-modulated PWFS\cite{guyon2018wavefront} in combination with lower order wavefront control to reach and maintain high contrast. The Multi-AO Imaging Camera for Deep Observations (MICADO)\cite{davies2018micado} for the E-ELT is a pathfinder instrument for performing high contrast imaging on GSMTs that uses a PWFS. The High Angular Resolution Monolithic Optical and Near-infrared Integral field spectrograph (HARMONI)\cite{neichel2016adaptive}, also for the E-ELT has a PWFS in the single conjugate adaptive optics (SCAO) mode to deliver diffraction limited performance for the E-ELT's core spectroscopic capability. The Giant Magellan Extreme Adaptive Optics System (GMagAO-X)\cite{males2019gmagao} is being developed as a first light ExAO instrument for the GMT and will use a PWFS.
+
+
 This dissertation aims to develop the three-sided pyramid wavefront sensor (3PWFS) as an alternative GSMT-ExAO wavefront sensor. The 3PWFS  uses fewer detector pixels so it is less sensitive to read noise than the 4PWFS. In Chapter \ref{CH1}, we determine the expected signal from a telescope and detail how atmospheric turbulence degrades image quality. Chapter \ref{CH2} describes the pyramid wavefront sensor and a mathematical formalism based on the diffraction theory description of the Foucault knife-edge test that predicts the intensity pattern after the PWFS. Our formalism allows us to calculate the intensity in the pupil images formed by the PWFS in the presence of phase errors corresponding to arbitrary Fourier modes. We use these results to motivate how we process signals from a 3PWFS. We compare the Raw Intensity method which uses the signal in the pupils as is, and derive the Slopes Maps calculation for the 3PWFS which combines the three pupil images of the 3PWFS to obtain the X and Y slopes of the wavefront. In Chapter \ref{CH3} we describe the design and current status of the MagAO-X 4PWFS. We then use the Object Oriented MATLAB Adaptive Optics toolbox (OOMAO) in Chapter \ref{Ch4} to simulate an end-to-end model of an adaptive optics system using a PWFS with modulation and compare the performance of the 3PWFS to the 4PWFS. In Chapter \ref{CH5} we present the Comprehensive Adaptive Optics and Coronagraph Test Instrument (CACTI), which was designed with the flexibility to support visiting instruments and to be easily re-configurable to perform multiple experiments. We first describe the design of CACTI, review its operation and calibration procedures, and discuss its current status. We then discuss an experiment performed on CACTI with a visiting three-sided pyramid wavefront sensor (3PWFS) to explore an alternative wavefront sensor architecture for GSMT-ExAO. Both a 3PWFS and 4PWFS were integrated into  CACTI to demonstrate the operation of a 3PWFS and compare it to the 4PWFS. We present results from experiments demonstrating the operation of the 3PWFS, and comparisons to the 4PWFS. Finally, in Chapter \ref{CH6}, we discuss the conclusions we can draw from the outcome of these experiments.
 
 
