--- a/report.bib
+++ b/report.bib
@@ -733,3 +733,361 @@ archivePrefix = "arXiv",
   year={2013},
   publisher={Springer}
 }
+
+@article{seager2015search,
+  title={The search for signs of life on exoplanets at the interface of chemistry and planetary science},
+  author={Seager, Sara and Bains, William},
+  journal={Science advances},
+  volume={1},
+  number={2},
+  pages={e1500047},
+  year={2015},
+  publisher={American Association for the Advancement of Science}
+}
+
+
+@article{wright2012exoplanet,
+  title={Exoplanet detection methods},
+  author={Wright, Jason T and Gaudi, B Scott},
+  journal={arXiv preprint arXiv:1210.2471},
+  year={2012}
+}
+
+@inproceedings{goebel2016evolutionary,
+  title={Evolutionary timescales of AO-produced speckles at NIR wavelengths},
+  author={Goebel, Sean B and Guyon, Olivier and Hall, Donald NB and Jovanovic, Nemanja and Atkinson, Dani E},
+  booktitle={Adaptive Optics Systems V},
+  volume={9909},
+  pages={990918},
+  year={2016},
+  organization={International Society for Optics and Photonics}
+}
+
+@INPROCEEDINGS{2020AAS...23528008P,
+       author = {{Perrin}, M. and {Brady}, G. and {Comeau}, T. and {Fowler}, J. and {Gontrum}, R. and {Hagopian}, J. and {Kautz}, M. and {Kurtz}, H. and {Laginja}, I. and {McChesney}, E. and {Noss}, J. and {Petrone}, P. and {Por}, E. and {Pueyo}, L. and {Sauvage}, J. and {Scott}, N. and {Shiri}, R. and {Sivaramakrishnan}, A. and {Subedi}, H. and {Valenzuela}, A. and {Weinstock}, S. and {Will}, S. and {Zhang}, R. and {Soummer}, R.},
+        title = "{Coronagraphy for segmented apertures: Results from demonstrations on the HICAT testbed}",
+    booktitle = {American Astronomical Society Meeting Abstracts \#235},
+         year = 2020,
+       series = {American Astronomical Society Meeting Abstracts},
+       volume = {235},
+        month = jan,
+          eid = {280.08},
+        pages = {280.08},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020AAS...23528008P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2014SPIE.9143E..27N,
+       author = {{N'Diaye}, Mamadou and {Choquet}, Elodie and {Egron}, Sylvain and {Pueyo}, Laurent and {Leboulleux}, Lucie and {Levecq}, Olivier and {Perrin}, Marshall D. and {Elliot}, Erin and {Wallace}, J. Kent and {Hugot}, Emmanuel and {Marcos}, Michel and {Ferrari}, Marc and {Long}, Chris A. and {Anderson}, Rachel and {DiFelice}, Audrey and {Soummer}, R{\'e}mi},
+        title = "{High-contrast Imager for Complex Aperture Telescopes (HICAT): II. Design overview and first light results}",
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+    booktitle = {Space Telescopes and Instrumentation 2014: Optical, Infrared, and Millimeter Wave},
+         year = 2014,
+       editor = {{Oschmann}, Jacobus M., Jr. and {Clampin}, Mark and {Fazio}, Giovanni G. and {MacEwen}, Howard A.},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {9143},
+        month = aug,
+          eid = {914327},
+        pages = {914327},
+          doi = {10.1117/12.2056694},
+archivePrefix = {arXiv},
+       eprint = {1407.0980},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014SPIE.9143E..27N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{martinez2007optimization,
+  title={Optimization of apodized pupil Lyot coronagraph for ELTs},
+  author={Martinez, P and Boccaletti, A and Kasper, M and Baudoz, P and Cavarroc, C},
+  journal={Astronomy \& Astrophysics},
+  volume={474},
+  number={2},
+  pages={671--678},
+  year={2007},
+  publisher={EDP Sciences}
+}
+
+@INPROCEEDINGS{2019AAS...23420802K,
+       author = {{Kruk}, Jeffrey W.},
+        title = "{WFIRST: Project Overview and Status}",
+    booktitle = {American Astronomical Society Meeting Abstracts \#234},
+         year = 2019,
+       series = {American Astronomical Society Meeting Abstracts},
+       volume = {234},
+        month = jun,
+          eid = {208.02},
+        pages = {208.02},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019AAS...23420802K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2021BAAS...53c0301G,
+       author = {{Gaudi}, B. and {Roberge}, A. and {Habex Team} and {Luvoir Study Team}},
+        title = "{Tools to Find Living Worlds: The HabEx and LUVOIR Mission Concepts}",
+    booktitle = {Bulletin of the American Astronomical Society},
+         year = 2021,
+       volume = {53},
+        month = mar,
+          eid = {0301},
+        pages = {0301},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021BAAS...53c0301G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@inproceedings{jovanovic2018high,
+  title={High-contrast spectroscopy testbed for Segmented Telescopes: instrument overview and development progress},
+  author={Jovanovic, N and Ruane, G and Echeverri, D and Delorme, JR and Mawet, D and Fucik, J and Wallace, JK and Coker, C and Delacroix, A and Levraud, N and others},
+  booktitle={Ground-based and Airborne Instrumentation for Astronomy VII},
+  volume={10702},
+  pages={107024E},
+  year={2018},
+  organization={International Society for Optics and Photonics}
+}
+
+@INPROCEEDINGS{2019SPIE11117E..1FR,
+       author = {{Ruane}, Garreth and {Mawet}, Dimitri and {Riggs}, A.~J. Eldorado and {Serabyn}, Eugene},
+        title = "{Scalar vortex coronagraph mask design and predicted performance}",
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Optics},
+    booktitle = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+         year = 2019,
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {11117},
+        month = sep,
+          eid = {111171F},
+        pages = {111171F},
+          doi = {10.1117/12.2528625},
+archivePrefix = {arXiv},
+       eprint = {1908.09786},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019SPIE11117E..1FR},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@article{mazoyer2019high,
+  title={High-contrast testbeds for future space-based direct imaging exoplanet missions},
+  author={Mazoyer, Johan and Baudoz, Pierre and Belikov, Ruslan and Crill, Brendan and Fogarty, Kevin and Galicher, Raphael and Groff, Tyler and Guyon, Olivier and Juanola-Parramon, Roser and Kasdin, Jeremy and others},
+  journal={arXiv preprint arXiv:1907.09508},
+  year={2019}
+}
+@ARTICLE{2020PASP..132j4502C,
+       author = {{Currie}, Thayne and {Pluzhnik}, Eugene and {Guyon}, Olivier and {Belikov}, Ruslan and {Miller}, Kelsey and {Bos}, Steven and {Males}, Jared and {Sirbu}, Dan and {Bond}, Charlotte and {Frazin}, Richard and {Groff}, Tyler and {Kern}, Brian and {Lozi}, Julien and {Mazin}, Benjamin A. and {Nemati}, Bijan and {Norris}, Barnaby and {Subedi}, Hari and {Will}, Scott},
+        title = "{Laboratory Demonstration of Spatial Linear Dark Field Control For Imaging Extrasolar Planets in Reflected Light}",
+      journal = {\pasp},
+     keywords = {Astronomical instrumentation, Exoplanet detection methods, Exoplanets, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2020,
+        month = oct,
+       volume = {132},
+       number = {1016},
+          eid = {104502},
+        pages = {104502},
+          doi = {10.1088/1538-3873/aba9ad},
+archivePrefix = {arXiv},
+       eprint = {2007.14413},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020PASP..132j4502C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{belikov2014ames,
+  title={Ames Coronagraph Experiment: Enabling Missions to Directly Image Exoplanets},
+  author={Belikov, Ruslan},
+  year={2014}
+}
+@INPROCEEDINGS{2020AAS...23544704O,
+       author = {{O'Meara}, J. and {Luvoir Mission Concept Study Team}},
+        title = "{The LUVOIR Mission Concept: Telling the Story of Life in the Universe}",
+    booktitle = {American Astronomical Society Meeting Abstracts \#235},
+         year = 2020,
+       series = {American Astronomical Society Meeting Abstracts},
+       volume = {235},
+        month = jan,
+          eid = {447.04},
+        pages = {447.04},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020AAS...23544704O},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2017JATIS...3d9002M,
+       author = {{Miller}, Kelsey and {Guyon}, Olivier and {Males}, Jared},
+        title = "{Spatial linear dark field control: stabilizing deep contrast for exoplanet imaging using bright speckles}",
+      journal = {Journal of Astronomical Telescopes, Instruments, and Systems},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2017,
+        month = oct,
+       volume = {3},
+          eid = {049002},
+        pages = {049002},
+          doi = {10.1117/1.JATIS.3.4.049002},
+archivePrefix = {arXiv},
+       eprint = {1703.04259},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017JATIS...3d9002M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2017arXiv170607377G,
+       author = {{Guyon}, Olivier and {Miller}, Kelsey and {Males}, Jared and {Belikov}, Ruslan and {Kern}, Brian},
+        title = "{Spectral Linear Dark Field Control: Stabilizing Deep Contrast for Exoplanet Imaging Using out-of-band Speckle Field}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2017,
+        month = jun,
+          eid = {arXiv:1706.07377},
+        pages = {arXiv:1706.07377},
+archivePrefix = {arXiv},
+       eprint = {1706.07377},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017arXiv170607377G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2019JATIS...5d9004M,
+       author = {{Miller}, Kelsey and {Males}, Jared R. and {Guyon}, Olivier and {Close}, Laird M. and {Doelman}, David and {Snik}, Frans and {Por}, Emiel and {Wilby}, Michael J. and {Keller}, Christoph and {Bohlman}, Chris and {Van Gorkom}, Kyle and {Rodack}, Alexander and {Knight}, Justin and {Lumbres}, Jennifer and {Bos}, Steven and {Jovanovic}, Nemanja},
+        title = "{Spatial linear dark field control and holographic modal wavefront sensing with a vAPP coronagraph on MagAO-X}",
+      journal = {Journal of Astronomical Telescopes, Instruments, and Systems},
+         year = 2019,
+        month = oct,
+       volume = {5},
+          eid = {049004},
+        pages = {049004},
+          doi = {10.1117/1.JATIS.5.4.049004},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019JATIS...5d9004M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{haffert2021data,
+  title={Data-driven subspace predictive control of adaptive optics for high-contrast imaging},
+  author={Haffert, Sebastiaan Y and Males, Jared R and Close, Laird M and Van Gorkom, Kyle and Long, Joseph D and Hedglen, Alexander D and Guyon, Olivier and Schatz, Lauren and Kautz, Maggie Y and Lumbres, Jennifer and others},
+  journal={Journal of Astronomical Telescopes, Instruments, and Systems},
+  volume={7},
+  number={2},
+  pages={029001},
+  year={2021},
+  publisher={International Society for Optics and Photonics}
+}
+
+@inproceedings{shi2017dynamic,
+  title={Dynamic testbed demonstration of WFIRST coronagraph low order wavefront sensing and control (LOWFS/C)},
+  author={Shi, Fang and Cady, Eric and Seo, Byoung-Joon and An, Xin and Balasubramanian, Kunjithapatham and Kern, Brian and Lam, Raymond and Marx, David and Moody, Dwight and Prada, Camilo Mejia and others},
+  booktitle={Techniques and Instrumentation for Detection of Exoplanets VIII},
+  volume={10400},
+  pages={104000D},
+  year={2017},
+  organization={International Society for Optics and Photonics}
+}
+
+
+@inproceedings{males2014direct,
+  title={Direct imaging of exoplanets in the habitable zone with adaptive optics},
+  author={Males, Jared R and Close, Laird M and Guyon, Olivier and Morzinski, Katie and Puglisi, Alfio and Hinz, Philip and Follette, Katherine B and Monnier, John D and Tolls, Volker and Rodigas, Timothy J and others},
+  booktitle={Adaptive Optics Systems IV},
+  volume={9148},
+  pages={914820},
+  year={2014},
+  organization={International Society for Optics and Photonics}
+}
+
+
+
+
+@inproceedings{jovanovic2016scexao,
+  title={The SCExAO high contrast imager: transitioning from commissioning to science},
+  author={Jovanovic, Nemanja and Guyon, Olivier and Lozi, J and Currie, T and Hagelberg, J and Norris, B and Singh, G and Pathak, P and Doughty, D and Goebel, S and others},
+  booktitle={Adaptive Optics Systems V},
+  volume={9909},
+  pages={99090W},
+  year={2016},
+  organization={International Society for Optics and Photonics}
+}
+
+@inproceedings{clergeon2018subaru,
+  title={Subaru AO188 upgrade phase 1: integration of the new real-time system},
+  author={Clergeon, Christophe and Minowa, Yosuke and Guyon, Olivier and Ono, Yoshito and Mieda, Etsuko and Skaf, Nour and Yoshida, Hiroshige and Hayano, Yukata and Hattori, Takashi and Schubert, Kiaina and others},
+  booktitle={Adaptive Optics Systems VI},
+  volume={10703},
+  pages={1070337},
+  year={2018},
+  organization={International Society for Optics and Photonics}
+}
+
+@article{gaudi2020habitable,
+  title={The Habitable exoplanet observatory (HabEx) mission concept study final report},
+  author={Gaudi, B Scott and Seager, Sara and Mennesson, Bertrand and Kiessling, Alina and Warfield, Keith and Cahoy, Kerri and Clarke, John T and Domagal-Goldman, Shawn and Feinberg, Lee and Guyon, Olivier and others},
+  journal={arXiv preprint arXiv:2001.06683},
+  year={2020}
+}
+
+@article{guyon2018extreme,
+  title={Extreme adaptive optics},
+  author={Guyon, Olivier},
+  journal={Annual Review of Astronomy and Astrophysics},
+  volume={56},
+  pages={315--355},
+  year={2018},
+  publisher={Annual Reviews}
+}
+
+
+
+@inproceedings{guyon2018compute,
+  title={The compute and control for adaptive optics (CACAO) real-time control software package},
+  author={Guyon, Olivier and Sevin, Arnaud and Gratadour, Damien and Bernard, Julien and Ltaief, Hatem and Sukkari, Dalal and Cetre, Sylvain and Skaf, Nour and Lozi, Julien and Martinache, Frantz and others},
+  booktitle={Adaptive Optics Systems VI},
+  volume={10703},
+  pages={107031E},
+  year={2018},
+  organization={International Society for Optics and Photonics}
+}
+
+
+
+@article{correia2020performance,
+  title={Performance limits of adaptive-optics/high-contrast imagers with pyramid wavefront sensors},
+  author={Correia, Carlos M and Fauvarque, Olivier and Bond, Charlotte Z and Chambouleyron, Vincent and Sauvage, Jean-Fran{\c{c}}ois and Fusco, Thierry},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={495},
+  number={4},
+  pages={4380--4391},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+@article{verinaud2004nature,
+  title={On the nature of the measurements provided by a pyramid wave-front sensor},
+  author={V{\'e}rinaud, Christophe},
+  journal={Optics Communications},
+  volume={233},
+  number={1-3},
+  pages={27--38},
+  year={2004},
+  publisher={Elsevier}
+}
+
+
+ @misc{CHAOTIC, 
+ title={Community of Adaptive OpTics and hIgh Contrast testbeds}, url={https://sites.google.com/view/highcontrastlabs/home}, journal={Community of Adaptive OpTics and hIgh Contrast testbedsHome}, author={Laginja, Iva and Leboulleux, Lucie and Brooks, Keira and Jensen-Clem, Rebecca}} 
+ 
+ @inproceedings{neichel2016adaptive,
+  title={The adaptive optics modes for HARMONI: from Classical to Laser Assisted Tomographic AO},
+  author={Neichel, B and Fusco, T and Sauvage, J-F and Correia, C and Dohlen, K and El-Hadi, K and Blanco, L and Schwartz, N and Clarke, F and Thatte, NA and others},
+  booktitle={Adaptive Optics Systems V},
+  volume={9909},
+  pages={990909},
+  year={2016},
+  organization={International Society for Optics and Photonics}
+}
+
+@inproceedings{esposito2011adaptive,
+  title={Adaptive Optics at the LBT telescope: from NGS to LGS and interferometry},
+  author={Esposito, S and Herbst, T and Hinz, P and Rabien, S},
+  booktitle={Adaptive Optics: Methods, Analysis and Applications},
+  pages={AMA2},
+  year={2011},
+  organization={Optical Society of America}
+}
